# mtui

./: .gitignore  README.md  database.py  devour.txt  main.py  parse_decklist.py  pyproject.toml  test_db.py
