[project]
name = "mtui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=12.2.0",
    "rapidfuzz>=3.14.5",
    "requests>=2.33.1",
    "textual>=8.2.3",
    "textual-dev>=1.8.0",
    "textual-image[textual]>=0.12.0",
    "textual-imageview>=0.1.1",
]
